# pixieditor-rust-sdk

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/pixieditor_sdk/: Cargo.toml
crates/pixieditor_sdk/src/: abi.rs  brushes.rs  commands.rs  extension.rs  lib.rs  localization.rs  logging.rs  pixieditor_extension.rs  resources.rs  user.rs  windowing.rs
crates/pixieditor_sdk/src/Proto/: CommandMetadata.proto  CustomToolConfig.proto  FetchPaletteListQuery.proto  PaletteListResult.proto
crates/pixiext_packaging/: Cargo.toml
crates/pixiext_packaging/src/: main.rs
crates/pixiext_packaging/src/packaging/: builder.rs  encryptor.rs  metadata.rs  mod.rs  utils.rs
src/: lib.rs
src/Proto/: ExtensionPalette.proto
src/ProtoAutogen/: protos.rs
