[package]
name = "pixiext_packaging"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pixiext"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
aes = "0.8"
rand = "0.8"
anyhow = "1"
walkdir = "2"
block-modes = "0.9.1"
cbc = "0.1.2"
base64 = "0.22.1"